<resources>
    <string name="app_name">Inventory App</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="error">Error: %1$s</string>
    <string name="login">Login</string>
    <string name="new_user">New User</string>
    <string name="create_account">Create Account</string>
    <string name="go_back">Go Back</string>
    <string name="usernameSpeak">Enter your username</string>
    <string name="passwordSpeak">Enter your password</string>
    <string name="itemName">-itemName-</string>
    <string name="itemStock">Qty: %1$s</string>
    <string name="itemPrice">Price: $%1$s</string>
    <string name="image_desc">Image of inventory item</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="reduce_stock_by_one">Reduce stock by one</string>
    <string name="increase_stock_by_one">Increase stock by one</string>
    <string name="header">%1$s</string>
    <string name="add_item">Add a new item into inventory</string>
    <string name="add_inventory_item">Add Item to Inventory</string>
    <string name="inventory_header">Current Inventory</string>
    <string name="delete_item">Delete this item from inventory</string>
    <string name="item_name">Item Name</string>
    <string name="item_description">Item Description</string>
    <string name="current_stock">Current Stock</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_delete">Confirm Deletion</string>
    <string name="are_you_sure">Are you sure you want to delete this item?</string>
    <string name="permission_required">Permission Required</string>
    <string name="permission_ask">This permission is needed to send SMS, go to settings?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enable_sms">Enable SMS</string>
    <string name="logout">Logout</string>
    <string name="item_price">Item Price</string>
    <string name="item_sku">Item SKU</string>
    <string-array name="sort_options">
        <item>Name</item>
        <item>Quantity</item>
        <item>Price</item>
        <item>Date added</item>
        <item>Date modified</item>
    </string-array>
    <string name="arrow_up"> ▲</string>
    <string name="arrow_down"> ▼</string>
    <string name="sort_options">Sort options</string>
</resources>