<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".LoginActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="bottom" />
    <TextView
        android:id="@+id/headerText"
        android:layout_width="240dp"
        android:layout_gravity="center"
        android:layout_height="40dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/header"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/username"
        android:layout_width="240dp"
        android:layout_gravity="center"
        android:layout_height="40dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:text="@string/username" />

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="240dp"
        android:layout_gravity="center"
        android:layout_height="60dp"
        android:textColor="@color/black"
        android:textColorHint="@color/almost_black"
        android:autofillHints="emailAddress"
        android:hint="@string/usernameSpeak"
        android:inputType="textEmailAddress" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_gravity="bottom"
        android:text="@string/username" />
    <TextView
        android:id="@+id/password"
        android:layout_width="240dp"
        android:layout_gravity="center"
        android:layout_height="40dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:text="@string/password" />
    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="240dp"
        android:layout_gravity="center"
        android:layout_height="60dp"
        android:textColor="@color/black"
        android:textColorHint="@color/almost_black"
        android:autofillHints="password"
        android:hint="@string/passwordSpeak"
        android:inputType="textPassword" />
    <TextView
        android:id="@+id/infoText"
        android:layout_width="240dp"
        android:layout_gravity="center"
        android:layout_height="40dp"
        android:textSize="14sp"
        android:text="@string/error"
        android:visibility="invisible"
        android:textColor="@color/design_default_color_error"/>
    <Button
        android:id="@+id/loginButton"
        android:layout_width="240dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_tint"
        android:text="@string/login"
        android:enabled="false"/>

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="240dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_tint"
        android:text="@string/create_account" />


</LinearLayout>